Created webserver and its configuration index.js

--- a/package.json
+++ b/package.json
@@ -1,12 +1,23 @@
 {
   "name": "webserver",
   "version": "1.0.0",
-  "description": "",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "express": "^4.17.1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/danielschaerli/webserver.git"
+  },
+  "bugs": {
+    "url": "https://github.com/danielschaerli/webserver/issues"
+  },
+  "homepage": "https://github.com/danielschaerli/webserver#readme",
+  "description": ""
 }
